# Half-Stack_Python

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .rstcheck.cfg  .yamllint  Dockerfile  LICENSE  README.md  README.rst  bb  bb.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: SphinxBuild.yml  build-docker.yml  jekyll-gh-pages.yml  lint.yml  publish-ubuntu-pandoc.yml  sphinx-build.yml
_sources/: index.rst.txt
_sources/notebooks/: 20240511_git_aliases.rst.txt  20241031_npm_generic_packages.rst.txt  20241105_bazel_remote_cache.rst.txt  20241111_rm_cmd_too_long.rst.txt  20241111_rst_reference.rst.txt  20241111_vim_motions.rst.txt  BashCmdExamples.ipynb.txt  JenkinsPythonAutomation.ipynb.txt  npm_generic_packages.rst.txt  pythonPathTricks.ipynb.txt  (+1 more)
ci/: Dockerfile
notebooks/: 10312024_npm_generic_packages.html  20240511_git_aliases.html  20240511_git_aliases.ipynb  20240622_bash_cmd_examples.html  20241031_npm_generic_packages.html  20241105_bazel_remote_cache.html  20241111_rm_cmd_too_long.html  20241111_rst_reference.html  20241111_vim_motions.html  20250114_bash_special_variables.html  BashCmdExamples.html  JenkinsPythonAutomation.html  JenkinsPythonAutomation.ipynb  Jenkins_tips.html  bazel-remote-cache.html  deepCopy_osEnviron_shellVsPythonDiscrepancy.html  gitAliases.html  gitAliases.ipynb  npm_generic_packages.html  pythonPathTricks.html  pythonPathTricks.ipynb  threading_guide.html
source/: conf.py  index.rst
tests/: test_sphinx.py
(+28 files in other folders)
