[project]
name = "half-stack-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "nbsphinx>=0.9.6",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=7.4.7",
    "jenkinsapi>=0.3.13",
]

[dependency-groups]
lint = [
    "nbconvert>=7.16.5",
    "rstcheck>=6.2.4",
    "yamllint>=1.35.1",
]
